# api/tradereturn.go
@@ -14,6 +14,7 @@ import (
 	"go.uber.org/zap"
 )
 
+// TradeReturn => ส่วนการคืนของทางฝั่ง offline หาก order ค้างคลัง ต้องการเปลี่ยนรุ่นใหม่ ลูกค้าหน้าสาขาต้องการคืนของ จะทำรายการที่เทรด
 func (app *Application) TradeReturnRoute(apiRouter *chi.Mux) {
 	apiRouter.Post("/login", app.Login)
 
@@ -23,18 +24,17 @@ func (app *Application) TradeReturnRoute(apiRouter *chi.Mux) {
 		r.Use(jwtauth.Authenticator)
 
 		/******** Trade Retrun ********/
-		r.Get("/get-waiting", app.GetStatusWaitingDetail)       // แสดงข้อมูล ReturnOrder เฉพาะสถานะของ StatusCheckID =1
-		r.Get("/get-confirm", app.GetStatusConfirmDetail)       // แสดงข้อมูล ReturnOrder เฉพาะสถานะของ StatusCheckID =2
-		r.Get("/search-waiting", app.SearchStatusWaitingDetail) // แสดงข้อมูล ReturnOrder เฉพาะสถานะของ StatusCheckID =1 ตามช่วงวันที่สร้าง(CreateDate)ที่เลือก วันที่เริ่มต้น-สิ้นสุด แสดงข้อมูลจำนวนตามวันที่นั้น
-		r.Get("/search-confirm", app.SearchStatusConfirmDetail) // แสดงข้อมูล ReturnOrder เฉพาะสถานะของ StatusCheckID =2 ตามช่วงวันที่สร้าง(CreateDate)ที่เลือก วันที่เริ่มต้น-สิ้นสุด แสดงข้อมูลจำนวนตามวันที่นั้น
-		r.Post("/create-trade", app.CreateTradeReturn)
-		r.Post("/add-line/{orderNo}", app.CreateTradeReturnLine)
-		r.Post("/confirm-receipt/{identifier}", app.ConfirmReceipt)
-		r.Patch("/confirm-return/{orderNo}", app.ConfirmReturn)
+		r.Get("/get-waiting", app.GetStatusWaitingDetail)       // แสดงข้อมูลของที่คืนมายังคลังแล้ว สถานะ waiting
+		r.Get("/get-confirm", app.GetStatusConfirmDetail)       // แสดงข้อมูลของที่คืนมายังคลังแล้ว สถานะ confirm
+		r.Get("/search-waiting", app.SearchStatusWaitingDetail) // แสดงข้อมูลของที่คืนมายังคลังแล้ว สถานะ waiting ตามช่วงวันที่สร้าง(CreateDate) เริ่มต้น-สิ้นสุด จะแสดงตามวันที่นั้น
+		r.Get("/search-confirm", app.SearchStatusConfirmDetail) // แสดงข้อมูลของที่คืนมายังคลังแล้ว สถานะ confirm ตามช่วงวันที่สร้าง(CreateDate) เริ่มต้น-สิ้นสุด จะแสดงตามวันที่นั้น
+		r.Post("/create-trade", app.CreateTradeReturn)			// สร้างฟอร์มทำรายการคืนของเข้าระบบ
+		r.Post("/add-line/{orderNo}", app.CreateTradeReturnLine)// สร้างรายการคืนแต่ละรายการของ order นั้นเพิ่ม
+		r.Patch("/confirm-return/{orderNo}", app.ConfirmReturn) // การยันยืนรับเข้าโดยฝั่งบัญชี จะทำการตรวจเช็คจากข้อมูล confirmReceipt + ข้อมูลในระบบ เมื่อเช็คว่าจำนวนคืนตรงกันจะถือว่าทำรายการคืนสำเร็จ
 	})
-
 }
 
+// review
 // @Summary Get Return Orders with StatusCheckID = 1
 // @Description Retrieve Return Orders with StatusCheckID = 1 (Waiting)
 // @ID Get-Waiting-ReturnOrder
@@ -45,8 +45,8 @@ func (app *Application) TradeReturnRoute(apiRouter *chi.Mux) {
 // @Failure 400 {object} Response "Bad Request"
 // @Failure 500 {object} Response "Internal Server Error"
 // @Router /trade-return/get-waiting [get]
-func (api *Application) GetStatusWaitingDetail(w http.ResponseWriter, r *http.Request) {
-	result, err := api.Service.ReturnOrder.GetReturnOrdersByStatus(r.Context(), 1) // StatusCheckID = 1
+func (app *Application) GetStatusWaitingDetail(w http.ResponseWriter, r *http.Request) {
+	result, err :=app.Service.ReturnOrder.GetReturnOrdersByStatus(r.Context(), 1) // StatusCheckID = 1
 	if err != nil {
 		handleError(w, err)
 		return
@@ -62,6 +62,7 @@ func (api *Application) GetStatusWaitingDetail(w http.ResponseWriter, r *http.Re
 	handleResponse(w, true, "⭐ Return Orders with StatusCheckID = 1 (WAITING) retrieved successfully ⭐", result, http.StatusOK)
 }
 
+// review
 // @Summary Get Return Orders with StatusCheckID = 2
 // @Description Retrieve Return Orders with StatusCheckID = 2 (Confirmed)
 // @ID Get-Confirm-ReturnOrder
@@ -72,8 +73,8 @@ func (api *Application) GetStatusWaitingDetail(w http.ResponseWriter, r *http.Re
 // @Failure 400 {object} Response "Bad Request"
 // @Failure 500 {object} Response "Internal Server Error"
 // @Router /trade-return/get-confirm [get]
-func (api *Application) GetStatusConfirmDetail(w http.ResponseWriter, r *http.Request) {
-	result, err := api.Service.ReturnOrder.GetReturnOrdersByStatus(r.Context(), 2) // StatusCheckID = 2
+func (app *Application) GetStatusConfirmDetail(w http.ResponseWriter, r *http.Request) {
+	result, err := app.Service.ReturnOrder.GetReturnOrdersByStatus(r.Context(), 2) // StatusCheckID = 2
 	if err != nil {
 		handleError(w, err)
 		return
@@ -89,6 +90,7 @@ func (api *Application) GetStatusConfirmDetail(w http.ResponseWriter, r *http.Re
 	handleResponse(w, true, "⭐ Return Orders with StatusCheckID = 2 (CONFIRM) retrieved successfully ⭐", result, http.StatusOK)
 }
 
+// review
 // @Summary Search Return Orders with StatusCheckID = 1 by Date Range
 // @Description Retrieve Return Orders with StatusCheckID = 1 (Waiting) within a specific date range
 // @ID Search-Waiting-ReturnOrder
@@ -101,12 +103,12 @@ func (api *Application) GetStatusConfirmDetail(w http.ResponseWriter, r *http.Re
 // @Failure 400 {object} Response "Bad Request"
 // @Failure 500 {object} Response "Internal Server Error"
 // @Router /trade-return/search-waiting [get]
-func (api *Application) SearchStatusWaitingDetail(w http.ResponseWriter, r *http.Request) {
+func (app *Application) SearchStatusWaitingDetail(w http.ResponseWriter, r *http.Request) {
 	// รับค่า startDate และ endDate จาก URL query
 	startDate := r.URL.Query().Get("startDate")
 	endDate := r.URL.Query().Get("endDate")
 
-	result, err := api.Service.ReturnOrder.GetReturnOrdersByStatusAndDateRange(r.Context(), 1, startDate, endDate) // StatusCheckID = 1
+	result, err := app.Service.ReturnOrder.GetReturnOrdersByStatusAndDateRange(r.Context(), 1, startDate, endDate) // StatusCheckID = 1
 	if err != nil {
 		handleError(w, err)
 		return
@@ -123,6 +125,7 @@ func (api *Application) SearchStatusWaitingDetail(w http.ResponseWriter, r *http
 	handleResponse(w, true, "⭐ Return Orders of StatusCheckID = 1 retrieved successfully ⭐", result, http.StatusOK)
 }
 
+// review
 // @Summary Search Return Orders with StatusCheckID = 2 by Date Range
 // @Description Retrieve Return Orders with StatusCheckID = 2 (Confirmed) within a specific date range
 // @ID Search-Confirm-ReturnOrder
@@ -135,12 +138,12 @@ func (api *Application) SearchStatusWaitingDetail(w http.ResponseWriter, r *http
 // @Failure 400 {object} Response "Bad Request"
 // @Failure 500 {object} Response "Internal Server Error"
 // @Router /trade-return/search-confirm [get]
-func (api *Application) SearchStatusConfirmDetail(w http.ResponseWriter, r *http.Request) {
+func (app *Application) SearchStatusConfirmDetail(w http.ResponseWriter, r *http.Request) {
 	// รับค่า startDate และ endDate จาก URL query
 	startDate := r.URL.Query().Get("startDate")
 	endDate := r.URL.Query().Get("endDate")
 
-	result, err := api.Service.ReturnOrder.GetReturnOrdersByStatusAndDateRange(r.Context(), 2, startDate, endDate) // StatusCheckID = 2
+	result, err := app.Service.ReturnOrder.GetReturnOrdersByStatusAndDateRange(r.Context(), 2, startDate, endDate) // StatusCheckID = 2
 	if err != nil {
 		handleError(w, err)
 		return
@@ -156,6 +159,7 @@ func (api *Application) SearchStatusConfirmDetail(w http.ResponseWriter, r *http
 	handleResponse(w, true, "⭐ Return Orders of StatusCheckID = 2 retrieved successfully ⭐", result, http.StatusOK)
 }
 
+// review
 // @Summary Create a new trade return order
 // @Description Create a new trade return order with multiple order lines
 // @ID create-trade-return
@@ -213,6 +217,7 @@ func (app *Application) CreateTradeReturn(w http.ResponseWriter, r *http.Request
 	handleResponse(w, true, "⭐ Created trade return order successfully => Status [booking ✔️]⭐", result, http.StatusOK)
 }
 
+// review
 // @Summary Add a new trade return line to an existing order
 // @Description Add a new trade return line based on the provided order number and line details
 // @ID add-trade-return-line
@@ -273,65 +278,7 @@ func (app *Application) CreateTradeReturnLine(w http.ResponseWriter, r *http.Req
 	handleResponse(w, true, "⭐ Created trade return line successfully ⭐", result, http.StatusCreated)
 }
 
-// ConfirmTradeReturn godoc
-// @Summary Confirm Receipt from Ware House
-// @Description Confirm a trade return order based on the provided identifier (OrderNo or TrackingNo) and input lines for ReturnOrderLine.
-// @ID confirm-trade-return
-// @Tags Trade Return
-// @Accept json
-// @Produce json
-// @Param identifier path string true "OrderNo or TrackingNo"
-// @Param request body request.ConfirmTradeReturnRequest true "Trade return request details"
-// @Success 200 {object} api.Response{result=response.ConfirmReceipt} "Trade return order confirmed successfully"
-// @Failure 400 {object} api.Response "Bad Request"
-// @Failure 500 {object} api.Response "Internal Server Error"
-// @Router /trade-return/confirm-receipt/{identifier} [post]
-func (app *Application) ConfirmReceipt(w http.ResponseWriter, r *http.Request) {
-	// รับค่า identifier จาก URL parameter
-	identifier := chi.URLParam(r, "identifier")
-
-	// แปลงข้อมูล JSON
-	var req request.ConfirmTradeReturnRequest
-	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-		handleError(w, fmt.Errorf("invalid request body: %w", err))
-		return
-	}
-
-	// กำหนดค่า identifier
-	req.Identifier = identifier
-
-	// รับข้อมูล claims จาก JWT token
-	_, claims, err := jwtauth.FromContext(r.Context())
-	if err != nil || claims == nil {
-		handleError(w, fmt.Errorf("unauthorized: missing or invalid token"))
-		return
-	}
-
-	// ดึง userID จาก claims
-	userID, err := utils.GetUserIDFromClaims(claims)
-	if err != nil {
-		handleError(w, err)
-		return
-	}
-
-	// เรียก service layer เพื่อดำเนินการ confirm
-	err = app.Service.BeforeReturn.ConfirmReceipt(r.Context(), req, userID)
-	if err != nil {
-		handleError(w, err)
-		return
-	}
-
-	response := res.ConfirmReceipt{
-		Identifier:     req.Identifier,
-		StatusReturnID: "7 (WAITING)",
-		StatusCheckID:  "1 (WAITING)",
-		UpdateBy:       userID,
-		UpdateDate:     time.Now(),
-	}
-
-	handleResponse(w, true, "⭐ Confirmed from Ware House successfully => Status [waiting ✔️] ⭐", response, http.StatusOK)
-}
-
+// review
 // ConfirmToReturn godoc
 // @Summary Confirm Return Order to Success
 // @Description Confirm a trade return order based on the provided order number (OrderNo) and input lines for ReturnOrderLine.
